# VerdictVault-AI

./: .gitignore  README.md  app.py  create_index_demo.py  create_index_demo2.py  data_process.py  data_process_old.py  main.py  out.txt  parsed_judgments.json  pyproject copy.toml  pyproject.toml  query_index.py  rag_layer.py  requirements.txt  rought.py  save_embedding.py
templates/: index.html  results.html
