[project]
name = "verdictvault-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "elasticsearch==8.11.0",
    "ndjson>=0.3.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pypdf2>=3.0.1",
    "flask>=3.1.2",
    "google>=3.0.0",
    "google-genai>=1.50.1",
    "markdown>=3.10",
]
