[project]
name = "verdictvault-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "elasticsearch",
    "ndjson>=0.3.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pypdf2>=3.0.1",
    "flask>=3.1.2",
    "google>=3.0.0",
    "google-genai>=1.50.1",
    "sentence-transformers>=5.1.2",
    "langchain-text-splitters>=1.0.0",
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "torchaudio==2.5.1+cu124",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }